# Passauer_Jahrbuecher_Pipeline

./: .gitignore  LICENSE  README.md  apply_pjb_patches_v2.py  apply_pjb_patches_v3.py  apply_pjb_patches_v4.py  apply_pjb_patches_v5.py  apply_pjb_patches_v6.py  pyproject.toml  requirements.txt
assets/: edition.css  edition.js
configs/: pjb-048-2006-gpubox.yaml  pjb-048-2006.yaml  pjb-049-2007-gpubox.yaml  pjb-053-2011-gpubox.yaml  pjb-054-2012-gpubox.yaml  pjb-055-2013-gpubox.yaml  pjb-056-2014-gpubox.yaml  pjb-058-2016-gpubox.yaml  pjb-059-2017-gpubox.yaml
notebooks/: colab_quickstart.ipynb
pjb_pipeline/: __init__.py  cli.py  config.py  normalize.py  normalize.py.bak  normalize.py.bak3  ocr.py  pipeline.py  render.py  stage.py  wiki_assembler.py
pjb_pipeline/emit/: __init__.py  graph.py  jsonld_context.py  pagexml.py  tei.py  wiki.py  wiki.py.bak3  wiki.py.bak4
pjb_pipeline/emit/html/: __init__.py  chrome.py  crops.py  renderers.py
pjb_pipeline/structure/: __init__.py  articles.py  columns.py  columns.py.bak4  footnotes.py  footnotes.py.bak3  toc.py
pjb_pipeline/wiki_templates/: CLAUDE.md  README.md  gitignore
scripts/: README.md  check_reading_order.py  merge_graphs.py
tests/: test_articles.py.bak  test_columns.py  test_columns.py.bak4  test_footnotes.py  test_graph.py  test_normalize.py.bak  test_normalize.py.bak3  test_toc.py  test_wiki.py.bak  test_wiki.py.bak3  test_wiki.py.bak4  test_wiki_assembler.py.bak
